operator/pre-production-validation/fixtures/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-validation-dependencies
  labels:
    app.kubernetes.io/part-of: platform-validation
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-validation-client
  labels:
    app.kubernetes.io/part-of: platform-validation
